--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,18 @@
     <string name="task2">Task 2</string>
     <string name="task3">Task 3</string>
     <string name="itmo">ITMO Univirsity</string>
+    <string name="switch_text">Switch</string>
+    <string name="hide_list">Hide list</string>
+    <string name="to_ast">To AST</string>
+    <string name="edit_text_default">Name</string>
+    <!-- Activity task1 detail screen -->
+    <string name="collatz">Col</string>
+    <string name="fibonacci">Fib</string>
+    <string name="natural">Nat</string>
+    <string name="profile_description">TextkldsfklsdjfssdjlfkdsfkView</string>
+    <string name="profile_title">Some Title</string>
+    <!-- Common -->
+    <string name="zero">0</string>
+    <string name="plus">+</string>
+    <string name="minus">-</string>
 </resources>
