--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="hide_list">Hide list</string>
     <string name="toast">Toast</string>
     <string name="edit_text_default">Name</string>
+    <string name="book_download">Download</string>
     <!-- Activity task1 detail screen -->
     <string name="collatz">Col</string>
     <string name="fibonacci">Fib</string>
