--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -15,4 +15,9 @@
     <string name="natural">Nat</string>
     <string name="profile_description">TextkldsfklsdjfssdjlfkdsfkView</string>
     <string name="profile_title">Some Title</string>
+    <!-- Activity task2 detail screen -->
+    <string name="run">Run</string>
+    <string name="stop">Stop</string>
+    <string name="continue_str">Continue</string>
+    <string name="reset">Reset</string>
 </resources>
